feat: Added alu RTL and config, Modified git ignore

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 *.vcd
 *.vvp
 *.log
+*.xml
 
 # Formal junk (keep the script, hide the engine work)
 formal/*/
@@ -9,8 +10,16 @@ formal/*/
 # OpenLane junk (The biggest space hog)
 runs/
 openlane/runs/
+results/
+reports/
 
 # Tool specific
 obj_dir/
 __pycache__/
 .DS_Store
+
+# Ignore Intermediate Synthesis files
+*.dot
+*.json
+*.lef
+*.gds
